use new Java features for readability and brevity